@startuml
class logic.unit.BaseUnit {
- int row
- int column
- boolean isWhite
- String name
# int hp
# int power
# boolean isFlying
+ boolean move(int)
+ void attack(ArrayList<BaseUnit>)
+ int getRow()
+ void setRow(int)
+ int getColumn()
+ void setColumn(int)
+ int getHp()
+ void setHp(int)
+ String getName()
+ void setName(String)
+ boolean isWhite()
+ void setisWhite(boolean)
+ int getPower()
+ boolean isFlying()
}


class logic.unit.MeleeUnit {
}
class logic.unit.RangeUnit {
+ void attack(ArrayList<BaseUnit>)
}

class logic.unit.FlyingUnit {
+ boolean move(int)
}

class logic.game.GameSystem {
- ArrayList<BaseUnit> allWhitePieces
- ArrayList<BaseUnit> allRedPieces
- boolean gameEnd
- {static} GameSystem instance
+ {static} GameSystem getInstance()
+ boolean isGameEnd()
+ void setGameEnd(boolean)
+ ArrayList<BaseUnit> getAllWhitePieces()
+ ArrayList<BaseUnit> getAllRedPieces()
+ void printBoardStatus(ArrayList<BaseUnit>)
+ void removeDeadPieces(ArrayList<BaseUnit>)
+ BaseUnit promote(BaseUnit,int)
}


class application.Main {
- {static} boolean whiteTurn
- {static} Scanner sc
+ {static} void main(String[])
- {static} void turnFlow(ArrayList<BaseUnit>)
}




logic.unit.BaseUnit <|-- logic.unit.MeleeUnit
logic.unit.BaseUnit <|-- logic.unit.RangeUnit
logic.unit.BaseUnit <|-- logic.unit.FlyingUnit
@enduml